Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81950

Unexpected warning with QLCDNumber::setSmallDecimalPoint

    XMLWordPrintable

Details

    • ce55667b62e77902c18d9a2a62e5e323516159d7 (qt/qtbase/5.14)

    Description

      When setSmallDecimalPoint is set to true for QLCDNumber, it is giving the following warning:

      Using QCharRef with an index pointing outside the valid range of a QString. The corresponding behavior is deprecated, and will be changed in a future version of Qt.
      

      Sample code is simple:

          QLCDNumber *n = new QLCDNumber(this);
          n->setSmallDecimalPoint(true);
          n->display(123);
      

      It does not make any sense of this warning here. The warning is seen in 5.14.0 and 5.14.1

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            shmittal Shveta Mittal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes